--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
           </div>
 
           <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
-        {% enfif %}
+        {% endif %}
       {% else %}
           <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
 
