--- a/categories.html
+++ b/categories.html
@@ -26,3 +26,11 @@ title: Categories
     {% endfor %}
   </div>
 </div>
+
+<div class="wrapper-footer">
+  <div class="container">
+    <footer class="footer">
+      {% include svg-icons.html %}
+    </footer>
+  </div>
+</div>
