--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -4,4 +4,4 @@ title: towards-fluency
 permalink: /towards-fluency/
 ---
 
-<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com">
+<img src="https://images.pexels.com/photos/159697/book-reading-library-literature-159697.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="book">
