--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -4,3 +4,9 @@ permalink: /towards-fluency/
 ---
 
 <img src="https://images.pexels.com/photos/159697/book-reading-library-literature-159697.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="book">
+
+<h1>Outline</h1>
+
+<p>
+  ceci est un test
+</p>
