--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -7,6 +7,48 @@ permalink: /towards-fluency/
 
 <h1>Outline</h1>
 
-<p>
-  ceci est un test
-</p>
+<ul>
+  <li>Introduction</li>
+  <li>Book usage</li>
+  <li>Useful theory
+    <ul>
+      <li>What's a language?</li>
+      <li>Why is it interesting to learn a language?</li>
+      <li>The perfect student</li>
+      <li>The culture shock</li>
+    </ul>
+  </li>
+  <li>Define your goals
+    <ul>
+      <li>Subjectivity</li>
+      <li>Your definition</li>
+      <li>My definition</li>
+    </ul>
+  </li>
+  <li>Survivor's tool
+    <ul>
+      <li>The right mindset</li>
+      <li>Avoid bullshit</li>
+      <li>Pronunciation rules</li>
+      <li>Major questions</li>
+      <li>Relevant and interesting content</li>
+      <li>Multi-sensory skills</li>
+    </ul>
+  </li>
+  <li>Improve your toolbox - multiculturalism
+    <ul>
+      <li>Act like a local</li>
+      <li>Think like a local</li>
+      <li>Keep track</li>
+    </ul>
+  </li>
+  <li>Improve your toolbox - multilingualism
+    <ul>
+      <li>Words and grammar</li>
+      <li>Scenarist and actor (part 1): Self-conversation</li>
+      <li>Scenarist and actor (part 2): Real-life conversations</li>
+      <li>Reading/translating</li>
+    </ul>
+  </li>
+  <li>Conclusion</li>
+</ul>
