--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -52,3 +52,10 @@ permalink: /towards-fluency/
   </li>
   <li>Conclusion</li>
 </ul>
+
+<h1>Why that book and not another?</h1>
+<p>
+  This book can be considered as a mentor who will help you to learn any language from scratch. It will guide through all the process
+  by keeping you away from the bullshit and giving you only real experiences. It is interesting to learn a language but it is more
+  interesting to enjoy learning a language.
+</p>
