--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -63,3 +63,11 @@ permalink: /towards-fluency/
   to learn a language as the locals would like you to learn it</b>. Finally, what's is more important in this project is that it shows us that
   there is no shortcuts, you need to experience and enjoy the process to fully understand and use this tool of communication.
 </p>
+
+<h1>A little gift</h1>
+
+In order to let you know about what this book is fighting against, I decided to give a little gift
+<a href=”pdfs/Avoid bullshit.pdf” target=”_blank” onclick=”_gaq.push([‘_trackEvent’,’Download’,’PDF’,this.href]);”>Download my file</a>
+
+
+<h1>Keep me updated</h1>
