--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -67,7 +67,7 @@ permalink: /towards-fluency/
 <h1>A little gift</h1>
 
 In order to let you know about what this book is fighting against, I decided to give a little gift
-<a href="pdfs/Avoid bullshit.pdf" target="_blank" onclick="_gaq.push(['_trackEvent','Download','PDF',this.href]);">Download my file</a>
+<a href="/pdfs/Avoid bullshit.pdf" target="_blank" onclick="_gaq.push(['_trackEvent','Download','PDF',this.href]);">Download my file</a>
 
 
 <h1>Keep me updated</h1>
