--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -66,8 +66,12 @@ permalink: /towards-fluency/
 
 <h1>A little gift</h1>
 
-In order to let you know about what this book is fighting against, I decided to give a little gift
-<a href="/pdfs/Avoid bullshit.pdf" target="_blank" onclick="_gaq.push(['_trackEvent','Download','PDF',this.href]);">Download my file</a>
+<p style="text-align:justify">
+In order to let you know about what this book is fighting against, I decided to give a little gift. This is the entire sub part called
+"Avoid bullshit" in the Survivor's tool part. It will present you some pseudo sciences that a lot of people are spreading around and which
+you should avoid if you don't want to waste time and money.
 
+Here it is : <a href="/pdfs/Avoid bullshit.pdf" target="_blank">Avoid bullshit</a>
 
+</p>
 <h1>Keep me updated</h1>
