--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -71,7 +71,9 @@ In order to let you know about what this book is fighting against, I decided to 
 "Avoid bullshit" in the Survivor's tool part. It will present you some pseudo sciences that a lot of people are spreading around and which
 you should avoid if you don't want to waste time and money.
 <br>
-Here it is : <a href="/pdfs/Avoid bullshit.pdf" target="_blank">Avoid bullshit</a>
+<br>
+
+<b>Here it is :</b> <a href="/pdfs/Avoid bullshit.pdf" target="_blank">Avoid bullshit</a>
 </p>
 
 <h1>Keep me updated</h1>
