--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -76,7 +76,13 @@ you should avoid if you don't want to waste time and money.
 <b>Here it is :</b> <a href="/pdfs/Avoid bullshit.pdf" target="_blank">Avoid bullshit</a>
 </p>
 
-<h1>Keep me updated</h1>
+<h1>Join the familly</h1>
+<p style="text-align:justify">
+And now? Well, if you are interested by what you read and you want to know more about the nexts steps of the book I invite you to join
+the newsletter in order to follow the news about this book. Finally, if you have some questions or you simply want to contact me,
+you can find more informations at the bottom of the page. <b>Thank you!</b>
+</p>
+
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
