--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -57,7 +57,7 @@ permalink: /towards-fluency/
 <p style="text-align:justify">
   <b>This book can be considered as a mentor who will help you to learn any language from scratch</b>. It will guide through all the process
   by keeping you away from the bullshit and giving you only real experiences. It is interesting to learn a language but it is more
-  interesting to enjoy learning a language. Furthermore, this book emphasizes on the relatioship between culture and language. It will
+  interesting to enjoy learning a language. Furthermore, this book emphasizes on the relationship between culture and language. It will
   give you another point of view on what is a language and why learning a language to just add a line on your CV is not respectful
   and does not give you value. <b>This book want to help people learn your language as you would like them to learn it and it will help you
   to learn a language as the locals would like you to learn it</b>. Finally, what's is more important in this project is that it shows us that
