--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-permalink: /towards-fluency/
+permalink: /en/towards-fluency/
 ---
 
 <img src="https://images.pexels.com/photos/346839/pexels-photo-346839.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="book">
