--- a/towards-fluency.html
+++ b/towards-fluency.html
@@ -59,8 +59,7 @@ permalink: /en/towards-fluency/
   by keeping you away from the bullshit and giving you only real experiences. It is interesting to learn a language but it is more
   interesting to enjoy learning a language. Furthermore, this book emphasizes on the relationship between culture and language. It will
   give you another point of view on what is a language and why learning a language to just add a line on your CV is not respectful
-  and does not give you value. <b>This book want to help people learn your language as you would like them to learn it and it will help you
-  to learn a language as the locals would like you to learn it</b>. Finally, what's is more important in this project is that it shows us that
+  and does not give you value. <b>This book wants to help everyone to learn a language with respect and hard/creative work</b>. Finally, what's is more important in this project is that it shows us that
   there is no shortcuts, you need to experience and enjoy the process to fully understand and use this tool of communication.
 </p>
 
