--- a/towards-fluency-cn.html
+++ b/towards-fluency-cn.html
@@ -68,7 +68,7 @@ permalink: /cn/towards-fluency/
 <br>
 <br>
 
-<b>阅读更多 :</b> <a href="/pdfs/Avoid bullshit.pdf" target="_blank">Avoid bullshit</a>
+<b>详情请见 :</b> <a href="/pdfs/Avoid bullshit.pdf" target="_blank">Avoid bullshit</a>
 </p>
 
 <h1>加入我们</h1>
