--- a/towards-fluency-cn.html
+++ b/towards-fluency-cn.html
@@ -68,7 +68,7 @@ permalink: /cn/towards-fluency/
 <br>
 <br>
 
-<b>详情请见 :</b> <a href="/pdfs/Avoid bullshit.pdf" target="_blank">Avoid bullshit</a>
+<b>详情请见 :</b> <a href="/pdfs/Avoid bullshit cn.pdf" target="_blank">避开无效的学习方法</a>
 </p>
 
 <h1>加入我们</h1>
