--- a/towards-fluency-cn.html
+++ b/towards-fluency-cn.html
@@ -3,7 +3,7 @@ layout: page
 permalink: /cn/towards-fluency/
 ---
 
-<img src="https://images.pexels.com/photos/346839/pexels-photo-346839.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="book">
+<img src="/images/pexels-photo-346839.jpeg" alt="book">
 
 <h1>大纲</h1>
 
