--- a/towards-fluency-cn.html
+++ b/towards-fluency-cn.html
@@ -77,4 +77,4 @@ permalink: /cn/towards-fluency/
 最后，如果你有想要问我的问题，或者想要联系我，你可以选择文章底部的联系方式联系到我，期待你的来信， <b>非常感谢！</b>
 </p>
 
-<img src="/images/newsletter.jpeg" alt="newsletter">
+<img src="/images/newsletter.jpg" alt="newsletter">
