--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link rel="alternate" type="application/rss+xml" title="Clément Jean - Eternal learner and challenges lover" href="/feed.xml" />
     <link rel="icon"  type="image/png"    href="https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/master/images/%E4%B8%80%E4%BB%8B%E5%A5%BD%E5%AD%A6.png">
-    <!-- <script src="//d3js.org/d3.v3.min.js"></script> -->
   </head>
 
   <body>
@@ -234,5 +233,43 @@
 </article>
 
     </div>
+
+    <div class="wrapper-footer">
+      <div class="container">
+        <footer class="footer">
+          
+<a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
+
+
+<a href="https://github.com/Clement-Jean/"><i class="svg-icon github"></i></a>
+
+<a href="https://www.linkedin.com/in/clement-jean"><i class="svg-icon linkedin"></i></a>
+
+<a href="/feed.xml"><i class="svg-icon rss"></i></a>
+
+<a href="http://stackoverflow.com/users/11269045/clément-jean"><i class="svg-icon stackoverflow"></i></a>
+
+
+
+        </footer>
+      </div>
+    </div>
+
+    
+	<!-- Google Analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-111260962-1', 'auto');
+		ga('send', 'pageview', {
+		  'page': '/about/',
+		  'title': ''
+		});
+	</script>
+	<!-- End Google Analytics -->
+
   </body>
 </html>
