add mastodon verification

--- a/404.html
+++ b/404.html
@@ -19,6 +19,7 @@
     <meta property="twitter:title" content="404 - Page not found" />
     
 
+    <link href="https://techhub.social/@clementjean" rel="me">
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link rel="alternate" type="application/rss+xml" title="Clément Jean - Eternal learner and challenges lover" href="/feed.xml" />
     <link rel="icon"  type="image/png"    href="https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/master/images/%E4%B8%80%E4%BB%8B%E5%A5%BD%E5%AD%A6.png">
@@ -35,7 +36,7 @@
             <p class="site-description">Eternal learner and challenges lover</p>
           </div>
 
-          <nav> 
+          <nav>
             <a class="black-red-link" href="/">Home</a>
 	          <a class="black-red-link" href="/categories">Categories</a>
             <a class="black-red-link" href="/about">About</a>
