add mastodon icon

--- a/404.html
+++ b/404.html
@@ -63,19 +63,14 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          
-<a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
-
-
+          <a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
 <a href="https://github.com/Clement-Jean/"><i class="svg-icon github"></i></a>
-
 <a href="https://www.linkedin.com/in/clement-jean"><i class="svg-icon linkedin"></i></a>
-
 <a href="/feed.xml"><i class="svg-icon rss"></i></a>
-
+<a href="https://www.twitter.com/ClmentJean1"><i class="svg-icon twitter"></i></a>
 <a href="http://stackoverflow.com/users/11269045/clément-jean"><i class="svg-icon stackoverflow"></i></a>
 
-
+<a href="https://techhub.social/@clementjean"><i class="svg-icon mastodon"></i></a>
 
         </footer>
       </div>
