--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,7 @@
 
     
 
+    <link href="https://techhub.social/@clementjean" rel="me">
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link rel="alternate" type="application/rss+xml" title="Clément Jean - Eternal learner and challenges lover" href="/feed.xml" />
     <link rel="icon"  type="image/png"    href="https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/master/images/%E4%B8%80%E4%BB%8B%E5%A5%BD%E5%AD%A6.png">
@@ -32,7 +33,7 @@
             <p class="site-description">Eternal learner and challenges lover</p>
           </div>
 
-          <nav> 
+          <nav>
             <a class="black-red-link" href="/">Home</a>
 	          <a class="black-red-link" href="/categories">Categories</a>
             <a class="black-red-link" href="/about">About</a>
@@ -54,12 +55,13 @@
 <div style="margin-top: 1cm;">
     <center><h2 style="margin-bottom: 15px;" class="timeline-title">Clément Jean (一介)</h2></center>
     <center>
-        <div class="arrange-horizontally" style="margin-bottom: 25px;">
-<a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
-<p><a href="https://github.com/Clement-Jean/"><i class="svg-icon github"></i></a></p>
-<p><a href="https://www.linkedin.com/in/clement-jean"><i class="svg-icon linkedin"></i></a></p>
-<p><a href="/feed.xml"><i class="svg-icon rss"></i></a></p>
-<p><a href="http://stackoverflow.com/users/11269045/clément-jean"><i class="svg-icon stackoverflow"></i></a></p>
+        <div class="arrange-horizontally" style="margin-bottom: 25px;"><a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
+<a href="https://github.com/Clement-Jean"><i class="svg-icon github"></i></a>
+<a href="https://www.linkedin.com/in/clement-jean"><i class="svg-icon linkedin"></i></a>
+<a href="/feed.xml"><i class="svg-icon rss"></i></a>
+<a href="https://www.twitter.com/ClmentJean1"><i class="svg-icon twitter"></i></a>
+<a href="http://stackoverflow.com/users/11269045/clément-jean"><i class="svg-icon stackoverflow"></i></a>
+<p><a href="https://techhub.social/@clementjean"><i class="svg-icon mastodon"></i></a></p>
 </div>
     </center>
 </div>
@@ -237,19 +239,14 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          
-<a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
-
-
-<a href="https://github.com/Clement-Jean/"><i class="svg-icon github"></i></a>
-
+          <a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
+<a href="https://github.com/Clement-Jean"><i class="svg-icon github"></i></a>
 <a href="https://www.linkedin.com/in/clement-jean"><i class="svg-icon linkedin"></i></a>
-
 <a href="/feed.xml"><i class="svg-icon rss"></i></a>
-
+<a href="https://www.twitter.com/ClmentJean1"><i class="svg-icon twitter"></i></a>
 <a href="http://stackoverflow.com/users/11269045/clément-jean"><i class="svg-icon stackoverflow"></i></a>
 
-
+<a href="https://techhub.social/@clementjean"><i class="svg-icon mastodon"></i></a>
 
         </footer>
       </div>
