--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
       <div class="container">
         <footer class="footer">
           <a href="mailto:clement.jean@epitech.eu"><i class="svg-icon email"></i></a>
-<a href="https://github.com/Clement-Jean/"><i class="svg-icon github"></i></a>
+<a href="https://github.com/Clement-Jean"><i class="svg-icon github"></i></a>
 <a href="https://www.linkedin.com/in/clement-jean"><i class="svg-icon linkedin"></i></a>
 <a href="/feed.xml"><i class="svg-icon rss"></i></a>
 <a href="https://www.twitter.com/ClmentJean1"><i class="svg-icon twitter"></i></a>
